fixed spacing issue on form

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ input {
     margin-top: 0.6em;
     border-radius: 50px;
     border: 2px solid black;
+    margin-bottom: 1rem;
 }
 
 #progress-bar {
